--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -26,7 +26,7 @@
   min-height: 50px;
   border-bottom: 0;
   border-left: 5px solid #c8dec8;
-  background: #ecf1ec;
+  background: #e2f0e2;
   border-radius: 5px;
   @media(max-width: @tablet-breakpoint) {
     margin: 30px 0 60px;
