fixed scrollable tables

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -171,7 +171,7 @@
 					font-family: @body-font;
 					-webkit-font-smoothing: auto;
 					@media(max-width: @mobile-breakpoint) {
-						font-size: .9em;
+						font-size: .95em;
 					}
 				}
 
@@ -197,11 +197,11 @@
 					margin: 0 0 25px;
 					font-size: 1em;
 					line-height: 1.8em;
-					@media (max-width: 600px) {
+					@media (max-width: @mobile-breakpoint) {
 						text-align: left;
 						line-height: 1.8 !important;
 						font-style: normal;
-						font-size: 1em;
+						font-size: .95em;
 					}
 				}
 
