table font sizes

--- a/src/less/posts/responsivetable.less
+++ b/src/less/posts/responsivetable.less
@@ -21,7 +21,7 @@
 // ---------------------
 @table-header-font-weight: 400;
 @table-header-font-color: #757575;
-@table-cell-padding: 10px 1.6rem;
+@table-cell-padding: 10px;
 @table-bg: #fff;
 @table-bg-accent: #f5f5f5;
 @table-bg-hover: rgba(0,0,0,.12);
@@ -90,7 +90,7 @@ table {
       }
 
       td {
-        font-size: 0.85em !important;
+        font-size: 0.78em !important;
         font-weight: 300;
       }
     }
@@ -101,7 +101,7 @@ table {
     color: #ffffff;
     background: #3c414d;
     vertical-align: bottom;
-    font-size: 0.95em;
+    font-size: 0.8em;
   }
 
   > colgroup + thead,
