--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,8 +1,8 @@
 <!-- Start Scripts -->
-<script src="{{asset "js/includes/content-api.min.js"}}"></script>
+<!--<script src="{{asset "js/includes/content-api.min.js"}}"></script>-->
 <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 <script src="{{asset "js/includes/retina.min.js"}}"></script>
-<script src="{{asset "js/includes/picturefill.min.js"}}"></script>
+<!--<script src="{{asset "js/includes/picturefill.min.js"}}"></script>-->
 <script async src="{{asset "js/global.js"}}"></script>
 <noscript id="deferred-styles">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-Bx4pytHkyTDy3aJKjGkGoHPt3tvv6zlwwjc3iqN7ktaiEMLDPqLSZYts2OjKcBx1" crossorigin="anonymous">
