very minor post style adjustments

--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -48,7 +48,8 @@
       .related-post-title {
         font-size: 1.25em;
         font-family: 'TTNormsPro-Medium', sans-serif;
-        height: 56px;
+        height: 68px;
+        overflow: hidden;
         line-height: 1.4;
         @media(max-width: 600px) {
           font-size: 1.1em;
@@ -58,6 +59,10 @@
       .tags {
         padding: 2px 6px;
         width: fit-content;
+
+        i {
+          font-size: .9em;
+        }
 
         span {
           font-family: 'AvenirNextLTPro-Medium', sans-serif;
