--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -5,8 +5,8 @@
     background-size: cover;
     background-position-y: center;
     height: 250px;
-    background-color: #3c5983;
-    background-blend-mode: multiply;
+    background-color: #324a6e;
+    background-blend-mode: darken;
     box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
     @media(max-width: @mobile-breakpoint) {
       margin-left: calc(~"-50vw + 50%") !important;
@@ -196,7 +196,7 @@
     margin: 40px 40px 0;
     padding: 0;
     @media(max-width: @tablet-breakpoint) {
-      margin: 40px 40px 0;
+      margin: 40px 20px 0;
     }
   }
 
@@ -234,7 +234,7 @@
     font-weight: 300;
     @media(max-width: 900px) {
       min-height: 63px;
-      margin: -20px 40px 30px;
+      margin: -20px 20px 30px;
     }
   }
 
@@ -247,7 +247,7 @@
 
     @media(max-width: @mobile-breakpoint) {
       grid-template-columns: [first] 1fr;
-      margin: 20px 40px 30px;
+      margin: 20px 20px 30px;
     }
 
     .tag-wrapper {
