added social links to author cards

--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -24,7 +24,10 @@
 
     .author-card-small {
       width: 48.5%;
-      margin-bottom: 5px !important;
+      margin: 0 0 15px;
+      @media(max-width: @mobile-breakpoint) {
+        margin: 20px 0 !important;
+      }
     }
   }
 
