--- a/partials/author/author-card.hbs
+++ b/partials/author/author-card.hbs
@@ -26,6 +26,12 @@
         {{#if website}}
           <span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{website}}</a></span>
         {{/if}}
+        {{#if twitter}}
+					<span class="website"><i class="fab fa-twitter"></i><a href="{{twitter_url}}">{{twitter}}</a></span>
+				{{/if}}
+        {{#if facebook}}
+					<span class="website"><i class="fab fa-facebook"></i><a href="{{facebook_url}}">Facebook</a></span>
+				{{/if}}
       </div>
     </div>
   </div>
