hack to ensure correct post is always top

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,5 +1,5 @@
 <!-- Start Post Preview -->
-<article class="post-preview">
+<article class="post-preview {{#primary_author}}{{slug}}{{/primary_author}}">
   <a href="{{url}}">
     {{#if featured}}
       <div class="featured">
