--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -21,3 +21,13 @@
     margin-bottom: 0;
   }
 }
+
+.home-template .postlist {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 1fr;
+
+  .post-preview {
+    margin: 0;
+  }
+}
