added h1 to tag page

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -423,6 +423,10 @@
 			color: @mapbox-color;
 		}
 
+		.learning-apache-spark i {
+			color: @learning-apache-spark;
+		}
+
 		.series-info {
 			margin-left: 15px;
 			@media(max-width: 950px) {
