--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -26,6 +26,9 @@
   display: grid;
   grid-gap: 30px;
   grid-template-columns: 1fr;
+  @media(max-width: 950px) {
+    grid-gap: 20px;
+  }
 
   .post-preview {
     margin: 0;
