--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -165,7 +165,7 @@
     }
 
     .imagewrapper {
-      box-shadow: 0 0 2px #4f57a9;
+      box-shadow: 0 0 2px #c3cde8;
     }
 
     .post-image {
