--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -220,7 +220,7 @@
 						text-rendering: auto;
 						margin: 0 0 10px;
 						padding-left: 0;
-						line-height: 1.7;
+						line-height: 1.5;
 						display: block;
 						@media(max-width: @mobile-breakpoint) {
 							margin: 0 0 15px;
@@ -384,11 +384,11 @@
 					max-width: 90%;
 					border-radius: 5px;
 					font-weight: 300;
-					border-left: 0.8em solid #DDDFE2;
+					border-left: 0.4em solid #DDDFE2;
 
 					& > p {
 						margin: 0 0 20px !important;
-						color: #6a6e71;
+						color: #858e94;
 						font-style: italic;
 						-webkit-font-smoothing: antialiased;
 					}
