--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -11,11 +11,12 @@
     padding: 20px 10px 10px;
   }
   @media(max-width: @mobile-breakpoint) {
-    margin: 10px 0 20px;
+    margin: 25px 0 20px;
     padding: 0 0 10px;
   }
 
   h5 {
+    display: none;
     font-size: 1.1em;
     color: #597d87 !important;
     font-family: @body-font-bold;
@@ -47,7 +48,7 @@
       opacity: 0.7;
       counter-increment: li -1;
       color: #2f4951;
-      font-family: @body-font;
+      font-family: 'AvenirNextLTPro-Medium', sans-serif;
       font-size: 0.85em;
       padding-left: 0;
       line-height: 1;
@@ -62,7 +63,7 @@
         margin-bottom: 0;
       }
       @media(max-width: @mobile-breakpoint) {
-        line-height: 1.3;
+        line-height: 1.4;
         margin: 12px 0;
         padding-left: 0;
       }
@@ -94,7 +95,7 @@
       a {
         color: #597d87;
         @media(max-width: @mobile-breakpoint) {
-          font-family: @body-font;
+          font-family: 'AvenirNextLTPro-Medium', sans-serif;
           font-size: 0.9em;
         }
       }
