restyle mobile series widget

--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -1,5 +1,5 @@
 header {
-  padding: 10px 0 15px;
+  padding: 10px 0 20px;
   margin: 0;
   box-shadow: unset !important;
   @media(max-width: @mobile-breakpoint) {
@@ -7,7 +7,7 @@ header {
   }
 
   .post-meta {
-    margin: 5px 0 15px;
+    margin: 5px 0 0;
     color: @text-color;
     font-size: 12px;
     display: flex;
