--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,6 +1,6 @@
 #seriesposts {
     margin: 0 0 30px;
-    padding: 20px 0 10px;
+    padding: 0;
     display: none;
     position: relative;
     overflow: hidden;
