related posts simplifiction

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -239,10 +239,15 @@
 	width: 100%;
 	background: #12203c;
 	text-align: center;
-	color: white;
-	font-size: 0.85em;
-	font-family: @body-font;
-	font-weight: 300;
 	padding: 25px 0;
-	line-height: 1.5;
+
+	p {
+		line-height: 1.5;
+		font-size: 0.85em;
+		font-family: @body-font;
+		font-weight: 300;
+		color: white;
+		opacity: .8;
+		margin: 0;
+	}
 }
