--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -22,7 +22,7 @@
 		line-height: 1;
 		margin: 0 0 20px;
 		@media(max-width: @tablet-breakpoint) {
-			margin: 10px 0 10px !important;
+			 margin: 0 0 5px !important;
 		}
 	}
 	@media(max-width: 1000px) {
@@ -147,6 +147,7 @@
 		margin: 15px 0 25px;
 		@media(max-width: @mobile-breakpoint) {
 			margin: 15px 0 20px;
+			font-size: .95em;
 		}
 	}
 
@@ -232,6 +233,10 @@
 		margin: 10px 0 0;
 		min-width: unset;
 		margin-bottom: 20px;
+	}
+
+	ul {
+		margin: 10px 0;
 	}
 }
 
