--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -1,8 +1,11 @@
 .page-container {
 	max-width: 1050px;
 	margin: auto;
+	max-width: 95%;
 	@media(max-width: 1200px) {
 		width: 100%;
+	}
+	@media(max-width: @tablet-breakpoint) {
 		max-width: none;
 	}
 
