restyled code snippets, series widget, tables

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -24,7 +24,7 @@
 .tag {
   .nodejs {
     color: #598708 !important;
-    background-color: #d9ecb6;
+    border: 1px solid #d9ecb6;
 
     * {
       color: #598708 !important;
@@ -33,7 +33,7 @@
 
   .aws {
     color: #c37a32 !important;
-    background-color: #ffecdd;
+    border: 1px solid #ffecdd;
 
     * {
       color: #c37a32 !important;
@@ -42,7 +42,7 @@
 
   .django {
     color: #43b78b !important;
-    background-color: lighten(#43b78b, 50%);
+    border: 1px solid lighten(#43b78b, 50%);
 
     * {
       color: #43b78b !important;
@@ -51,7 +51,7 @@
 
   .nosql {
     color: #6eb14a !important;
-    background-color: #dbf7e4;
+    border: 1px solid #dbf7e4;
 
     * {
       color: #6eb14a !important;
@@ -60,7 +60,7 @@
 
   .sql {
     color: #687ea5 !important;
-    background-color: #d2dce6;
+    border: 1px solid #d2dce6;
 
     * {
       color: #687ea5 !important;
@@ -69,7 +69,7 @@
 
   .restapis {
     color: #a93e3e !important;
-    background-color: #f2dbdb;
+    border: 1px solid #f2dbdb;
 
     * {
       color: #a93e3e !important;
@@ -78,7 +78,7 @@
 
   .frontend {
     color: #8c6f05 !important;
-    background-color: #fbedad;
+    border: 1px solid #fbedad;
 
     * {
       color: #b59316 !important;
@@ -87,7 +87,7 @@
 
   .data {
     color: #1cccae !important;
-    background-color: lighten(#1cccae, 50%);
+    border: 1px solid lighten(#1cccae, 50%);
 
     * {
       color: #1cccae !important;
@@ -96,7 +96,7 @@
 
   .roundup {
     color: #666fa5 !important;
-    background-color: #dce0f5;
+    border: 1px solid #dce0f5;
 
     * {
       color: #666fa5 !important;
@@ -105,7 +105,7 @@
 
   .excel {
     color: #2aa62a;
-    background-color: lighten(#136713, 70%);
+    border: 1px solid lighten(#136713, 70%);
 
     * {
       color: #2aa62a !important;
@@ -114,7 +114,7 @@
 
   .devops {
     color: #495f6d !important;
-    background-color: #e0e7ef;
+    border: 1px solid #e0e7ef;
 
     * {
       color: #495f6d !important;
@@ -123,7 +123,7 @@
 
   .pandas {
     color: #c03694 !important;
-    background-color: #f9ebf3;
+    border: 1px solid #f9ebf3;
 
     * {
       color: #c03694 !important;
@@ -132,7 +132,7 @@
 
   .googlecloud {
     color: #1990f5 !important;
-    background-color: #d9eeff;
+    border: 1px solid #d9eeff;
 
     * {
       color: #1990f5 !important;
@@ -141,6 +141,7 @@
 
   .mysql {
     color: #7a588e !important;
+    border: 1px solid x;
     background-color: #e4daea;
 
     * {
@@ -150,7 +151,7 @@
 
   .datascience {
     color: #449a8c !important;
-    background-color: #ccece7;
+    border: 1px solid #ccece7;
 
     * {
       color: #449a8c !important;
@@ -159,7 +160,7 @@
 
   .tableau {
     color: #af7409 !important;
-    background-color: #f3e4ca;
+    border: 1px solid #f3e4ca;
 
     * {
       color: #af7409 !important;
@@ -168,7 +169,7 @@
 
   .python {
     color: #0A9CC5 !important;
-    background-color: #d2eef7;
+    border: 1px solid #d2eef7;
 
     * {
       color: #0A9CC5 !important;
@@ -177,7 +178,7 @@
 
   .flask {
     color: #505d7f !important;
-    background-color: #e4e7ed;
+    border: 1px solid #e4e7ed;
 
     * {
       color: #505d7f !important;
@@ -186,7 +187,7 @@
 
   .statistics {
     color: #34b27a !important;
-    background-color: lighten(#34b27a, 50%);
+    border: 1px solid lighten(#34b27a, 50%);
 
     * {
       color: #34b27a !important;
@@ -195,7 +196,7 @@
 
   .expressjs {
     color: grey !important;
-    background-color: lighten(grey, 40%);
+    border: 1px solid lighten(grey, 40%);
 
     * {
       color: grey !important;
@@ -203,7 +204,7 @@
   }
 
   .atlassian {
-    background: #c4d8ff;
+    border: 1px solid #c4d8ff;
     color: #36408c !important;
 
     * {
@@ -212,7 +213,7 @@
   }
 
   .dataengineering {
-    background: #d7dde9;
+    border: 1px solid #d7dde9;
     color: #4c5777 !important;
 
     * {
@@ -221,7 +222,7 @@
   }
 
   .codesnippetcorner {
-    background: #d6dae6;
+    border: 1px solid #d6dae6;
     color: #747d9a !important;
 
     * {
@@ -230,7 +231,7 @@
   }
 
   .javascript {
-    background: #fff2be;
+    border: 1px solid #fff2be;
     color: #ad8303 !important;
 
     * {
@@ -239,7 +240,7 @@
   }
 
   .saas {
-    background: #cfdcf5;
+    border: 1px solid #cfdcf5;
     color: #3d5075 !important;
 
     * {
@@ -248,7 +249,7 @@
   }
 
   .datavis {
-    background: #c7f3f1;
+    border: 1px solid #c7f3f1;
     color: #5a8a8a !important;
 
     * {
@@ -257,16 +258,7 @@
   }
 
   .plotly {
-    background: #acf5fb;
-    color: #155a8b;
-
-    * {
-      color: #155a8b !important;
-    }
-  }
-
-  .saas {
-    background: #c0d0e7;
+    border: 1px solid #acf5fb;
     color: #155a8b;
 
     * {
@@ -275,7 +267,7 @@
   }
 
   .postgresql {
-    background: #ced8ef;
+    border: 1px solid #ced8ef;
     color: #425167;
 
     * {
@@ -285,7 +277,7 @@
 
   .bigdata {
     color: #12b3a3;
-    background: #ddf4eb;
+    border: 1px solid #ddf4eb;
 
     * {
       color: #12b3a3 !important;
@@ -294,7 +286,7 @@
 
   .graphql {
     color: #bc6391;
-    background: #fde1ef;
+    border: 1px solid #fde1ef;
 
     * {
       color: #bc6391 !important;
@@ -304,7 +296,7 @@
 
   .apache {
     color:#d5212a;
-    background: #ffe6e6;
+    border: 1px solid #ffe6e6;
 
     * {
       color:#d5212a !important;
@@ -312,7 +304,7 @@
   }
 
   .spark {
-    background: #ffecde;
+    border: 1px solid #ffecde;
     color: #e77115;
 
     * {
