--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -243,6 +243,7 @@
     grid-template-columns: [first] 1fr [last] 1fr;
     grid-template-rows: 367px;
     grid-column-gap: 10px;
+    grid-row-gap: 10px;
     margin: 30px 40px 20px;
 
     @media(max-width: @mobile-breakpoint) {
@@ -252,7 +253,7 @@
 
     .tag-wrapper {
       background: #f4fcff;
-      margin: 0 0 20px;
+      margin: 0;
       border: 1px solid #dadada;
       transition: all 0.3s ease-out;
       grid-template-rows: 291px;
