--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,8 +2,9 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #182c35;
-    color: #daf7fd;
+    background: #eef7f2;
+    color: #444;
+    border: 1px solid #ddeee5;
 
     .attr {
       color: #7ac9ff !important;
@@ -92,12 +93,6 @@
 
     .link {
       text-decoration: underline;
-    }
-
-    &::before {
-      content: "JSON";
-      color: white;
-      background: rgba(20, 86, 39, 0.4);
     }
   }
 }
