--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -12,8 +12,8 @@
     &.output,
     &.properties,
     &.shell {
-      background-color: #212733;
-      color: #eceff4;
+      background-color: #2E3440;
+      color: #cdd2d9;
       font-weight: normal;
 
       .title {
@@ -112,24 +112,6 @@
 
       .strong {
         font-weight: bold;
-      }
-    }
-
-    .hljs.output,
-    .language-output {
-      &::before {
-        content: "Output" !important;
-      }
-    }
-
-    .hljs.bash,
-    .hljs.shell,
-    .language-bash,
-    .language-shell {
-      &::before {
-        content: "Shell" !important;
-        color: white;
-        background: rgba(35, 51, 99, 0.4);
       }
     }
   }
