--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -245,8 +245,7 @@
 						}
 
 						ul {
-							margin-left: 0;
-							margin-bottom: 0;
+							 margin: 10px 0;
 
 							li {
 								border-left: 1px solid rgba(77, 177, 212, 0.3);
@@ -298,7 +297,6 @@
 					font-weight: 300;
 					box-shadow: -1px 1px 0 #f1ddce;
 					@media(max-width: @mobile-breakpoint) {
-						padding: 50px 20px 15px !important;
 						line-height: 1.6;
 						font-size: 0.9em;
 					}
@@ -314,7 +312,7 @@
 						width: -webkit-fill-available;
 						width: -moz-fill-available;
 						height: auto;
-						background: #f7d1b3;
+						background: #f5dfce;
 						content: "Protip";
 						display: block;
 						font-style: normal;
@@ -339,12 +337,13 @@
 					}
 
 					code {
-						border-radius: 0.3em;
+						border-radius: 3px;
 						white-space: normal;
 						background: #f1dbc6;
 						padding: 3px 5px;
 						color: #8b572b;
 						text-shadow: unset;
+						font-size: .9em;
 					}
 
 					pre {
@@ -353,7 +352,7 @@
 
 					pre > code {
 						padding: 46px 19px 12px;
-						border-radius: 0.3em;
+						border-radius: 3px;
 						white-space: normal;
 						background: #f1dbc6;
 						color: #8b572b;
@@ -486,7 +485,6 @@
 				max-width: 99%;
 				margin: 30px auto;
 				overflow: visible;
-				box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 				border: 1px solid rgba(206, 206, 206, 0.42);
 				border-radius: 3px;
 				overflow: hidden;
