--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -19,7 +19,7 @@
   h5 {
     display: none;
     font-size: 1.1em;
-    color: #597d87 !important;
+    color: #687f99 !important;
     font-family: @body-font-bold;
     letter-spacing: 1px;
     margin-bottom: 20px;
@@ -48,13 +48,13 @@
       margin: 18px 0;
       opacity: 0.7;
       counter-increment: li -1;
-      color: #2f4951;
+      color: #687f99;
       font-size: 0.85em;
       padding-left: 0;
       line-height: 1;
       display: flex;
       justify-content: flex-start;
-      
+
       a {
         font-family: 'AvenirNextLTPro-Medium', sans-serif;
       }
@@ -84,7 +84,7 @@
 
       &::before {
         content: "Part " counter(li, upper-roman) "." !important;
-        color: #64868f;
+        color: #687f99;
         font-family: 'AvenirNextLTPro-Medium', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
@@ -97,7 +97,7 @@
       }
 
       a {
-        color: #597d87;
+        color: #687f99;
         @media(max-width: @mobile-breakpoint) {
           font-family: 'AvenirNextLTPro-Medium', sans-serif;
           font-size: 0.9em;
