--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -7,7 +7,7 @@
   .tableContainer {
     margin: 30px 0;
   }
-  
+
   table,
   td,
   th {
@@ -254,7 +254,8 @@
   }
 
   .tableContainer {
-    box-shadow: 0 0 5px #d1d4e8;
+    border-radius: 3px;
+    border: 1px solid #e6edf0;
     margin: 20px auto 40px;
     position: relative;
     overflow: hidden;
