--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -28,6 +28,7 @@ blockquote pre {
     padding: 0;
     margin: 30px auto;
     max-width: 100%;
+    border-radius: 3px;
     @media(max-width: @mobile-breakpoint) {
       max-width: none;
       width: auto;
@@ -42,7 +43,7 @@ blockquote pre {
       position: relative;
       transition: all 0.5s ease-out;
       white-space: pre-wrap;
-      padding: 60px 25px 20px;
+      padding: 20px;
       overflow-x: hidden;
       font-weight: 100;
       margin: 0;
@@ -51,7 +52,6 @@ blockquote pre {
       @media(max-width: @mobile-breakpoint) {
         overflow-y: hidden;
         font-size: 12px;
-        padding: 55px 20px 20px;
       }
     }
 
@@ -65,15 +65,15 @@ blockquote pre {
     display: inline;
     overflow-y: visible;
     width: fit-content;
-    background: rgba(183, 192, 237, 0.18);
-    box-shadow: -1px 1px 2px rgba(29, 72, 120, 0.2), 0 0 1px rgba(29, 72, 120, 0.25);
+    background: rgba(183, 214, 247, 0.18);
     color: #3297b5;
     padding: 2px 4px;
     border-radius: 2px;
-    font-size: 0.8em;
+    font-size: 0.85em;
     font-weight: 400;
     font-family: 'AFParseGroteskMono-Light', sans-serif;
     white-space: nowrap;
+    border: 1px solid #e9f1fb;
   }
 
   .fullscreenbtn {
@@ -84,7 +84,7 @@ blockquote pre {
     font-size: 30px;
     width: fit-content;
     height: fit-content;
-    color: #9bc3e1;
+    color: #5d7c94;
     cursor: pointer;
     transition: all 0.3s ease-out;
     display: none;
@@ -210,7 +210,7 @@ blockquote pre {
   width: 100%;
   bottom: 0;
   height: 80px;
-  background: linear-gradient(0, #0d111d, rgba(20, 30, 57, 0) 70.71%);
+  background: linear-gradient(0, #eceef1, rgba(255, 255, 255, 0) 70.71%);
   z-index: 0;
   display: none;
   opacity: 1;
