--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -2,15 +2,9 @@
   .hljs {
     &.language-python,
     &.python {
-      color: #e4f8fd;
-      background: #1c2645;
-
-      &::before {
-        height: auto;
-        content: "Python" !important;
-        background: rgba(61, 85, 101, 0.4);
-        color: white;
-      }
+      border: 1px solid #daeaf2;
+      background: #e9f4f8;
+      color: #444; 
 
       .meta {
         color: white !important;
@@ -20,7 +14,7 @@
       .meta-string,
       .regexp,
       .string {
-        color: #b8ffdc !important;
+        color: #32917d !important;
         font-weight: 100;
         font-family: 'AFParseGroteskMono-Light';
 
@@ -38,7 +32,7 @@
       }
 
       .comment {
-        color: #737a8e !important;
+        color: #84b5c5 !important;
 
         @media(max-width: @mobile-breakpoint) {
           white-space: pre;
@@ -71,9 +65,8 @@
       }
 
       .keyword {
-        color: #45b3c9 !important;
-        font-weight: 600;
-        font-family: 'AFParseGroteskMono-Regular';
+        color: #2883b1 !important;
+        font-family: 'AFParseGroteskMono-Regular', sans-serif;
       }
     }
   }
