--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -302,6 +302,7 @@
 				background: none !important;
 				display: flex;
 				align-items: center;
+				border: 0 !important;
 
 				&:hover {
 					cursor: pointer;
