--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -6,7 +6,7 @@
 @hover-color: #40cebb;
 @button-color: #5eb9d7;
 @button-hover: #30b1a7;
-@button-shadow: #1d6e8e;
+@button-shadow: #4497b8;
 @h1-color: #152952;
 @header-color: #276890;
 @bg-color: #ecf1f9;					// Background color / secndary theme color
