--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -167,7 +167,7 @@
   overflow: hidden;
   @media(max-width: @mobile-breakpoint) {
     display: block;
-    margin: 10px 0 15px;
+    margin: 15px 0;
     width: auto!important;
   }
 }
