--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -30,8 +30,9 @@
 		margin: 20px 0 20px;
 
 		a {
-			background: #e7eefa;
-			color: #5b6a80 !important;
+			color: #99a2b3 !important;
+			border: 1px solid #cfd6e1;
+			border-radius: 2px;
 			font-size: 0.8em;
 			margin-right: 15px;
 			line-height: 1;
