--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -4,7 +4,7 @@
 	pagination
 ====================================================*/
 .pagination {
-	margin: 10px auto 15px;
+	margin: 0 auto 20px;
 	text-align: center;
 	display: block;
 	order: 20;
