code snippet style tweaks

--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -4,10 +4,10 @@
     &.python {
       border: 1px solid #daeaf2;
       background: #e9f4f8;
-      color: #444; 
+      color: #444;
 
       .meta {
-        color: white !important;
+        color: #6c6c6c !important;
       }
 
       .addition,
@@ -49,9 +49,9 @@
 
       .class,
       .title {
-        color: #ffe567 !important;
+        color: #dea500 !important;
         font-weight: 700;
-        font-family: 'AFParseGroteskMono-Light';
+        font-family: 'AFParseGroteskMono-Regular';
       }
 
       .attr,
