--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -42,7 +42,7 @@ blockquote pre {
       overflow-y: hidden;
       position: relative;
       transition: all 0.5s ease-out;
-      white-space: pre-wrap;
+      white-space: pre !important;
       padding: 20px;
       overflow-x: hidden;
       font-weight: 100;
