code snippet style tweaks

--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,12 +2,12 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #eef7f2;
-    color: #444;
-    border: 1px solid #ddeee5;
+    background: #e8f5ee;
+    color: #416c66;
+    border: 1px solid #c2e9d5;
 
     .attr {
-      color: #7ac9ff !important;
+      color: #319ce5 !important;
       font-weight: 700;
       font-family: 'AFParseGroteskMono-Regular', sans-serif;
     }
@@ -15,7 +15,7 @@
     .string {
       font-weight: 400;
       font-family: 'AFParseGroteskMono-Light';
-      color: #a0e4cf;
+      color: #4d9881;
 
       @media(max-width: @mobile-breakpoint) {
         white-space: pre;
@@ -31,55 +31,13 @@
       color: #5c6370;
     }
 
-    .doctag,
-    .formula,
-    .keyword {
-      color: #c678dd;
-    }
-
-    .deletion,
-    .name,
-    .section,
-    .selector-tag,
-    .subst {
-      color: #e06c75;
-    }
-
     .literal {
       color: #56b6c2;
     }
 
     .addition,
-    .attribute,
     .regexp {
       color: #c39dea !important;
-    }
-
-    .built_in,
-    .class,
-    .title {
-      color: #e6c07b;
-    }
-
-    .attr,
-    .number,
-    .selector-attr,
-    .selector-class,
-    .selector-pseudo,
-    .template-variable,
-    .type,
-    .variable {
-      color: #c79fd2;
-      font-style: normal !important;
-    }
-
-    .bullet,
-    .link,
-    .meta,
-    .selector-id,
-    .symbol,
-    .title {
-      color: #61aeee;
     }
 
     .emphasis {
