--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -2,9 +2,9 @@
   .hljs {
     &.language-python,
     &.python {
-      border: 1px solid #daeaf2;
-      background: #e9f4f8;
-      color: #444;
+      border: 1px solid #d0e7f2;
+      background: #e1f1f7;
+      color: #393b46;
 
       .meta {
         color: #6c6c6c !important;
@@ -32,7 +32,7 @@
       }
 
       .comment {
-        color: #84b5c5 !important;
+        color: #85a7b2 !important;
 
         @media(max-width: @mobile-breakpoint) {
           white-space: pre;
