--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -31,7 +31,7 @@
 
 		a {
 			color: #99a2b3 !important;
-			border: 1px solid #cfd6e1;
+			border: 1px solid #e3e8f0;
 			border-radius: 2px;
 			font-size: 0.8em;
 			margin-right: 15px;
@@ -47,7 +47,7 @@
 			&:hover {
 				cursor: pointer;
 				background: @hover-color;
-				box-shadow: -1px 1px 0 #239084;
+				border: 1px solid @hover-color;
 				color: white !important;
 
 				* {
@@ -85,10 +85,9 @@
 				list-style: none;
 				display: block !important;
 				border-radius: 2px;
-				background: #ffffff;
-				color: #dbdbdb;
+				background: #f4f6f9;
 				transition: 0.2s all ease-out;
-				border: 1px solid #f1f1f1;
+				border: 0;
 				padding: 0;
 				margin: auto 0;
 				min-width: 18%;
@@ -182,7 +181,7 @@
 
 				i {
 					margin: 0 auto;
-					color: #bfc3ce;
+					color: #b3b8c7;
 					font-size: 19px;
 					display: block;
 					width: fit-content;
