--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -41,6 +41,7 @@ header {
     .tags {
       height: 30px !important;
       padding: 10px 8px;
+      border-radius: 2px;
       @media(max-width: @mobile-breakpoint) {
         height: 30px !important;
         padding: 10px 8px;
