minor post styles

--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,9 +2,9 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #e8f5ee;
+    background: #edf6f1;
     color: #416c66;
-    border: 1px solid #c2e9d5;
+    border: 1px solid #d4f2e2;
 
     .attr {
       color: #319ce5 !important;
