--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -2,8 +2,8 @@
   .hljs {
     &.language-python,
     &.python {
-      border: 1px solid #d0e7f2;
-      background: #e1f1f7;
+      border: 1px solid #dbeef6;
+      background: #e9f1fb;
       color: #393b46;
 
       .meta {
