--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -51,7 +51,6 @@
 			img {
 				width: 100%;
 				line-height: 1;
-				box-shadow: 0 0 3px rgba(79, 87, 169, .5);
 				height: auto;
 			}
 		}
@@ -309,8 +308,7 @@
 					&::before {
 						margin-bottom: 11px;
 						font-size: 14px;
-						width: -webkit-fill-available;
-						width: -moz-fill-available;
+						width: 100%;
 						height: auto;
 						background: #f5dfce;
 						content: "Protip";
@@ -343,7 +341,8 @@
 						padding: 3px 5px;
 						color: #8b572b;
 						text-shadow: unset;
-						font-size: .9em;
+						font-size: .85em;
+						font-family: 'AFParseGroteskMono-Light', sans-serif;
 					}
 
 					pre {
