--- a/src/less/posts/responsivetable.less
+++ b/src/less/posts/responsivetable.less
@@ -75,7 +75,7 @@ table {
       .transition(all .3s ease);
 
       &:nth-child(odd) {
-        background: #fafbfc;
+        background: #f6f8fb;
       }
 
       > td,
@@ -189,7 +189,7 @@ table {
   > tbody > tr:nth-child(odd) {
     > th,
     > td {
-        background: #fafbfc;
+        background: #f6f8fb;
     }
   }
 }
