--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -92,13 +92,11 @@
 				margin: auto 0;
 				min-width: 18%;
 				@media(max-width: @tablet-breakpoint) {
-					min-width: unset !important;
 					border: 0;
 					height: 29px;
 				}
 				@media(max-width: @mobile-breakpoint) {
 					border: none;
-					min-width: unset;
 				}
 
 				&:before {
@@ -109,12 +107,11 @@
 					text-align: center;
 					display: block;
 					padding: 7px 0 7px 0 !important;
-					width: fit-content;
+					width: 100%;
 					margin: 0 auto;
 					@media(max-width: @tablet-breakpoint) {
 						padding: 0 !important;
 						height: fit-content;
-						border: 0;
 					}
 					@media(max-width: @mobile-breakpoint) {
 						padding: 0 !important;
@@ -186,7 +183,12 @@
 					display: block;
 					width: fit-content;
 					@media(max-width: @tablet-breakpoint) {
-						font-size: 27px;
+						font-size: 24px;
+						padding-top: 3px;
+					}
+					@media(max-width: @mobile-breakpoint) {
+						font-size: 22px;
+						padding: 4px 0px 0 4px;
 					}
 				}
 			}
